src/test/ui/macros/macro-in-expression-context-2.rs
macro_rules! empty { () => () }

fn main() {
    match 42 {
        _ => { empty!() }
    };
}
